<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/app_name"
            android:paddingEnd="@dimen/divider_margin_vertical"
            android:paddingLeft="@dimen/divider_margin_vertical"
            android:paddingRight="@dimen/divider_margin_vertical"
            android:paddingStart="@dimen/divider_margin_vertical"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/app_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/live_contests"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/widget_item_margin">

        <ListView
            android:id="@+id/contest_list_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorSecondaryText"
            android:dividerHeight="1dp"
            tools:listitem="@layout/widget_list_item" />

        <TextView
            android:id="@+id/contest_list_widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/nomatch"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorSecondaryText" />

    </FrameLayout>
</LinearLayout>