<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/sw_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".ui.fragments.DetailFragment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_tv_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contest_title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="@integer/title_max_lines"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold"
                        tools:text="April Long Challenge" />

                    <TextView
                        android:id="@+id/contest_website_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:maxLines="@integer/title_max_lines"
                        android:padding="@dimen/contest_title_padding"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/website_text_size"
                        tools:text="Codechef" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/contest_date_time_block_padding">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/contest_start_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/start_present"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/contest_start_end_text"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/contest_start_time_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:textColor="@color/black"
                                android:textSize="@dimen/contest_time_text_size"
                                android:textStyle="bold"
                                tools:text="03:00" />


                            <TextView
                                android:id="@+id/contest_start_time_ampm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/contest_ampm_left_margin"
                                android:layout_marginStart="@dimen/contest_ampm_left_margin"
                                android:textColor="@color/black"
                                android:textSize="@dimen/contest_ampm_text_size"
                                android:textStyle="bold"
                                tools:text="PM" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/contest_start_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/contest_ampm_left_margin"
                            android:layout_marginStart="@dimen/contest_ampm_left_margin"
                            android:textColor="@color/black"
                            android:textSize="@dimen/contest_date_text_size"
                            tools:text="SUN, 08 Apr '14" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/contest_start_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/end_present"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/contest_start_end_text"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/contest_end_time_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
                                android:textColor="@color/black"
                                android:textSize="@dimen/contest_time_text_size"
                                android:textStyle="bold"
                                tools:text="03:00" />

                            <TextView
                                android:id="@+id/contest_end_time_ampm"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/contest_ampm_left_margin"
                                android:layout_marginStart="@dimen/contest_ampm_left_margin"
                                android:textColor="@color/black"
                                android:textSize="@dimen/contest_ampm_text_size"
                                android:textStyle="bold"
                                tools:text="PM" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/contest_end_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/contest_ampm_left_margin"
                            android:layout_marginStart="@dimen/contest_ampm_left_margin"
                            android:textColor="@color/black"
                            android:textSize="@dimen/contest_date_text_size"
                            tools:text="SAT, 08 Apr '14" />
                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/contest_timezone_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/contest_resource_text_size"
                    tools:text="UTC/GMT +5:30 hours" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/list_item_padding"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/calendar_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryLight"
                        android:contentDescription="@string/add_to_calendar"
                        android:drawableLeft="@drawable/calendar_permission"
                        android:drawablePadding="@dimen/contest_title_padding"
                        android:drawableStart="@drawable/calendar_permission"
                        android:padding="@dimen/contest_title_padding"
                        android:text="@string/add_to_calendar"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/notification_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/contest_title_padding"
                        android:layout_marginStart="@dimen/contest_title_padding"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryLight"
                        android:contentDescription="@string/add_notification"
                        android:drawableLeft="@drawable/notification_on"
                        android:drawablePadding="@dimen/contest_title_padding"
                        android:drawableStart="@drawable/notification_on"
                        android:padding="@dimen/contest_title_padding"
                        android:text="@string/add_notification"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/contest_title_padding"
                    android:layout_marginTop="@dimen/contest_title_padding"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/web_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryLight"
                        android:contentDescription="@string/visit_website"
                        android:drawableLeft="@drawable/weblink"
                        android:drawablePadding="@dimen/contest_title_padding"
                        android:drawableStart="@drawable/weblink"
                        android:padding="@dimen/contest_title_padding"
                        android:text="@string/visit_website"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/share_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/contest_title_padding"
                        android:layout_marginStart="@dimen/contest_title_padding"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryLight"
                        android:contentDescription="@string/action_share"
                        android:drawableLeft="@drawable/share"
                        android:drawablePadding="@dimen/contest_title_padding"
                        android:drawableStart="@drawable/share"
                        android:padding="@dimen/contest_title_padding"
                        android:text="@string/share_friends"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/contest_ampm_left_margin"
                android:layout_marginStart="@dimen/contest_ampm_left_margin"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/contest_status_size"
                android:textStyle="bold"
                tools:text="Starts in" />

            <LinearLayout
                android:id="@+id/progress_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.amrendra.codefiesta.progressbar.CustomProgressBar
                    android:id="@+id/progress_bar_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.amrendra.codefiesta.progressbar.CustomProgressBar
                    android:id="@+id/progress_bar_hours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.amrendra.codefiesta.progressbar.CustomProgressBar
                    android:id="@+id/progress_bar_mins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.amrendra.codefiesta.progressbar.CustomProgressBar
                    android:id="@+id/progress_bar_sec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/progress_bar_label_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/progress_bar_label_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/days"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/progress_bar_label_hours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hours"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/progress_bar_label_mins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/min"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/progress_bar_label_sec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sec"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>